fix: update size of product card, prevent overflow

--- a/src/app/store/components/product-card/store-product-card.component.css
+++ b/src/app/store/components/product-card/store-product-card.component.css
@@ -6,6 +6,7 @@
  */
 
 mat-card {
+  width: 15rem;
   padding: 0;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
@@ -29,7 +30,6 @@ mat-card-header {
 
 img {
   flex: 1 1 auto;
-  width: 100%;
 }
 
 .actions {
